<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>samples</groupId>
	<artifactId>projectName-web-all</artifactId>
	<version>1.0.0</version>
	<packaging>war</packaging>

	<dependencies>
		<!-- persistence -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql.connector.java.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.core.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- domain-sample -->
		<dependency>
			<groupId>sample</groupId>
			<artifactId>projectName-domain</artifactId>
			<version>${projectName.domain.version}</version>
		</dependency>

		<!-- jersey -->
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-servlet</artifactId>
			<version>${jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>${jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-moxy</artifactId>
			<version>${jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-server</artifactId>
			<version>${jersey.version}</version>
		</dependency>

		<!-- oauth -->
		<dependency>
			<groupId>com.stormpath.sdk</groupId>
			<artifactId>stormpath-sdk-api</artifactId>
			<version>${stormpath.version}</version>
		</dependency>
		<dependency>
			<groupId>com.stormpath.sdk</groupId>
			<artifactId>stormpath-sdk-httpclient</artifactId>
			<version>${stormpath.version}</version>
			<scope>runtime</scope>
			<exclusions>
				<exclusion>
					<artifactId>jackson-mapper-asl</artifactId>
					<groupId>org.codehaus.jackson</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.stormpath.sdk</groupId>
			<artifactId>stormpath-sdk-oauth</artifactId>
			<version>${stormpath.version}</version>
		</dependency>

		<!-- reflections -->
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>${reflections.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- javaee -->
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${javaee.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- ejb -->
		<dependency>
			<groupId>javax.ejb</groupId>
			<artifactId>javax.ejb-api</artifactId>
			<version>${javax.ejb.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>false</downloadJavadocs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<compilerArguments>
						<endorseddirs>${endorsed.dir}</endorseddirs>
					</compilerArguments>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<delete file="${jboss.deploy.directory}/projectName-web-all.war" />
								<delete file="${jboss.deploy.directory}/projectName-DS.xml.failed" />
								<delete
									file="${jboss.deploy.directory}/projectName-web-all.war.failed" />
								<copy file="target/projectName-web-all.war"
									tofile="${jboss.deploy.directory}/projectName-web-all.war" />
							</tasks>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.*</include>
				</includes>
			</resource>
		</resources>
		<finalName>projectName-web-all</finalName>
	</build>

	<properties>
		<stormpath.version>1.0.RC2</stormpath.version>
		<javax.ejb.version>3.2</javax.ejb.version>
		<jersey.version>2.5</jersey.version>
		<jax.rs.version>2.0.1</jax.rs.version>
		<javaee.api.version>7.0</javaee.api.version>
		<hibernate.core.version>4.3.1.Final</hibernate.core.version>
		<projectName.domain.version>1.0.0</projectName.domain.version>
		<mysql.connector.java.version>5.1.23</mysql.connector.java.version>
	
		<!-- change %JBOSS_PATH% with jboss 7.1.1 path -->
		<jboss.path>%JBOSS_PATH%/jboss-as-7.1.1.Final</jboss.path>
		<jboss.deploy.directory>${jboss.path}/standalone/deployments</jboss.deploy.directory>
		<jboss.as.embedded.version>7.1.1.Final</jboss.as.embedded.version>
		<jboss.logmanager.version>2.0.1.Final</jboss.logmanager.version>
		<jboss.vfs.version>3.1.0.Final</jboss.vfs.version>
		<jboss.logging.version>3.3.0.Final</jboss.logging.version>
		<javax.servlet.api.version>3.1.0</javax.servlet.api.version>
		<javax.annotation.version>1.2</javax.annotation.version>
		<reflections.version>0.9.10</reflections.version>
		<java.version>1.7</java.version>
		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
		<junit.version>4.13.1</junit.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Maven Repository Group</name>
			<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<developers>
		<developer>
			<name>Rafael Peres dos Santos</name>
		</developer>
	</developers>
</project>